...
        android:text="@string/flashback"
        android:textColor="?attr/colorButtonNormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_songs"
        android:layout_width="333dp"
        android:layout_height="89dp"
        android:layout_marginBottom="199dp"
        android:background="@color/true_transparent"
        android:fontFamily="sans-serif-condensed"
        android:text="all songs"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
        android:textColor="?attr/colorButtonNormal"
        android:textSize="72sp"
        android:textStyle="bold"
        android:typeface="serif"
...
