<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="comf.example.tydia.cse_110_team_project_team_15_1.SongInfoActivity"
    tools:showIn="@layout/activity_song_info">

    <ToggleButton
        android:id="@+id/button_like2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="59dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/toggle_b_thumb_up_selector"
        app:layout_constraintBottom_toBottomOf="@+id/button_dislike2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/button_dislike2" />

    <ToggleButton
        android:id="@+id/button_dislike2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/toggle_b_thumb_down_selector"
        app:layout_constraintBottom_toBottomOf="@+id/button_next2"
        app:layout_constraintStart_toEndOf="@+id/button_next2"
        app:layout_constraintTop_toTopOf="@+id/button_next2" />

    <Button
        android:id="@+id/button_next2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="92dp"
        android:background="@drawable/b_skip_next"
        app:layout_constraintBottom_toBottomOf="@+id/button_prev2"
        app:layout_constraintStart_toEndOf="@+id/button_prev2"
        app:layout_constraintTop_toTopOf="@+id/button_prev2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_prev2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="84dp"
        android:layout_marginStart="48dp"
        android:background="@drawable/b_skip_prev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_pause2"
        android:layout_width="50dp"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/b_pause_selector"
        app:layout_constraintBottom_toBottomOf="@+id/button_prev2"
        app:layout_constraintEnd_toStartOf="@+id/button_next2"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toEndOf="@+id/button_prev2"
        app:layout_constraintTop_toTopOf="@+id/button_prev2"
        app:layout_constraintVertical_bias="0.64" />

    <Button
        android:id="@+id/button_play2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/b_play_selector"
        app:layout_constraintBottom_toBottomOf="@+id/button_prev2"
        app:layout_constraintEnd_toStartOf="@+id/button_next2"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toEndOf="@+id/button_prev2"
        app:layout_constraintTop_toTopOf="@+id/button_prev2"
        app:layout_constraintVertical_bias="0.64" />

    <TextView
        android:id="@+id/text_SongName"
        android:layout_width="252dp"
        android:layout_height="101dp"
        android:layout_marginTop="136dp"
        android:text="@string/song_name"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/text_timeAndDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_timeAndDate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_timeAndDate"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:text="@string/time_and_date"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/text_SongName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="248dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:text="@string/location"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/button_prev2"
        app:layout_constraintTop_toBottomOf="@+id/text_timeAndDate" />

    <TextView
        android:id="@+id/usernameField"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:text="Username"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@id/button_prev2"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <Button
        android:id="@+id/button_songInfoBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/b_back_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/b_vibe_songinfo"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_transparent"
        android:text="@string/flashback"
        app:layout_constraintBottom_toBottomOf="@+id/button_songInfoBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
