...
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/b_back_selector"
        app:layout_constraintBottom_toTopOf="@+id/list_allsongs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/b_viewDownload"
...
