<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="comf.example.tydia.cse_110_team_project_team_15_1.AlbumsActivity"
    tools:showIn="@layout/activity_albums">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/b_back_selector"
        app:layout_constraintBottom_toBottomOf="@+id/b_vibe_album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_vibe_album"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/flashback"
        android:background="@color/dark_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/list_allalbums"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/URLeditText"
        style="@android:style/Widget.Material.Light.EditText"
        android:layout_width="299dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="paste a URL of an album to download"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/list_AlbumSongs"
        app:layout_constraintEnd_toStartOf="@+id/b_download"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_download"
        android:layout_width="48dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/b_download"
        app:layout_constraintBottom_toBottomOf="@+id/URLeditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/URLeditText"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
