...
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="comf.example.tydia.cse_110_team_project_team_15_1.AlbumSongsActivity"
    tools:showIn="@layout/activity_album_songs">

    <Button
        android:id="@+id/btn_backAlbumSongs"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/b_back_selector"
        app:layout_constraintStart_toStartOf="parent"
...
